<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quiz.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textColor="#795548"
        android:textSize="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/firstQuestion" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/optionOne" />

                <RadioButton
                    android:id="@+id/two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/optionTwo" />
            </RadioGroup>

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/secondQuestion" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/optionThree" />

                <RadioButton
                    android:id="@+id/four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/optionFour" />
            </RadioGroup>

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/thirdQuestion" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/five"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/optionFive" />

                <RadioButton
                    android:id="@+id/six"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/optionSix" />
            </RadioGroup>

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/fourthQuestion" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/seven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/optionSeven" />

                <RadioButton
                    android:id="@+id/eight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/optionEight" />
            </RadioGroup>

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/fifthQuestion" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/nine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/optionNine" />

                <RadioButton
                    android:id="@+id/ten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/optionTen" />
            </RadioGroup>

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/sixthQuestion" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/eleven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/optionEleven" />

                <RadioButton
                    android:id="@+id/twelve"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/optionTwelve" />
            </RadioGroup>

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/seventhQuestion" />

            <EditText
                android:id="@+id/your_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/your_answer"
                android:inputType="textCapWords" />

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/eighthQuestion" />

            <CheckBox
                android:id="@+id/yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optionThirteen" />

            <CheckBox
                android:id="@+id/no_doubt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optionFourteen" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="submit"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
